# Olio-ohjelmointi

./: .gitignore
H1/: Functions.cpp  Functions.h  H1.pro  main.cpp
H2/: car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
H3_a/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
H3_b/: animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
H4/: car.cpp  car.h  engine.cpp  main.cpp  wheel.cpp
H5/: classa1.cpp  classa1.h  classa2.h  classb.cpp  classb.h  main.cpp
H6a/: H6a-1.pro  myclass.cpp  myclass.h
H6b/: CMakeLists.txt  exampleclass.cpp  exampleclass.h  main.cpp
H7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qtwidger_esim1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  page2.h
h2a/: car.cpp  main.cpp  student.cpp  student.h
h2b/: car.cpp  car.h  h2b.pro.user.e519a4e  main.cpp
harjoitustehtavia/Abstrakti_luokka/: Abstrakti_luokka.pro  animal.cpp  animal.h  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
harjoitustehtavia/H4_harjoittelua/: car.cpp  engine.cpp  engine.h  main.cpp  wheel.h
harjoitustehtavia/Interface_esimerkki/: Interface_esimerkki.pro  imyinterface.cpp  imyinterface.h  main.cpp  tetsclass.cpp  tetsclass.h
harjoitustehtavia/Kertaus1/: car.cpp  car.h  mainwindow.cpp  mainwindow.ui
harjoitustehtavia/Kertaus2/: mainwindow.cpp  mainwindow.h  mainwindow.ui  person.cpp  person.h
harjoitustehtavia/Kertaus3/: mainwindow.cpp  mainwindow.h  mainwindow.ui
harjoitustehtavia/Luento_Esim_pointer/: main.cpp
harjoitustehtavia/Luento_esim_h4_1/: Luento_esim_h4_1.pro  address.cpp  address.h  main.cpp  person.cpp  person.h
harjoitustehtavia/MyMathLibrary/: mymathlibrary.cpp
harjoitustehtavia/Perinta_esim2/: Perinta_esim2.pro  main.cpp  pesukone.cpp  pesukone.h  televisio.cpp  tuote.cpp
harjoitustehtavia/Qtwidger_esim1/: main.cpp  mainwindow.h  page2.ui  style.qss
harjoitustehtavia/Staattinen_luokka/: main.cpp  mystaticclass.cpp  mystaticclass.h
harjoitustehtavia/UseLibrary/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
harjoitustehtavia/Vektorit/: main.cpp
harjoitustehtavia/Viikkokoe4_tentti_testi/: Viikkokoe4_tentti_testi.pro  bicycle.cpp  bicycle.h  classa.cpp  classa.h  classb.cpp  classb.h  main.cpp  storage.cpp  storage.h
harjoitustehtavia/assosiaatio_testi/: main.cpp
harjoitustehtavia/http_esim1/: CMakeLists.txt  environment.cpp  httpperson.cpp  httpperson.h  main.cpp
harjoitustehtavia/kompositio_t1/: address.cpp  address.h  main.cpp  person.cpp  person.h
harjoitustehtavia/muistivuoto/: muistivuoto.pro
harjoitustehtavia/perinta_esim1/: aliluokka.cpp  aliluokka.h  kantaluokka.cpp  kantaluokka.h  main.cpp  perinta_esim1.pro
harjoitustehtavia/viikko5_tentti/: main.cpp  myclass.cpp  myclass.h
harjoitustehtavia/widget_esim2/: CMakeLists.txt  form1.cpp  form1.ui  form2.cpp  form2.h  form2.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  person.cpp  person.h  style.qss
